qt-x11-free (3:3.3.8b-13) unstable; urgency=low

  * Fix freetype inclusion test in xfreetype.test (fixes #1057)

 -- Alban Peignier <alban@tryphon.eu>  Wed, 07 May 2014 07:35:00 +0200

qt-x11-free (3:3.3.8b-12) unstable; urgency=low

  * Debian/Ubuntu rebuild

 -- Alban Peignier <alban@tryphon.eu>  Wed, 27 Nov 2013 23:34:38 +0100

qt-x11-free (3:3.3.8b-11) unstable; urgency=low

  * QA upload.
  * Stop shipping .la files.
  * Update section of libqt3-i18n to localization to fix the conflict.

 -- Regis Boudin <regis@debian.org>  Wed, 24 Aug 2011 23:16:44 +0100

qt-x11-free (3:3.3.8b-10) unstable; urgency=low

  * QA upload.
  * Build-depends on sqlite0-dev, as Qt3 doesn't support sqlite3.
  * Add a patch to use the system library instead of the embedded
    one.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 02 Aug 2011 15:37:16 +0200

qt-x11-free (3:3.3.8b-9) unstable; urgency=low

  * QA upload.
  * Tell configure about the multiarch path. (Closes: #634579).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 02 Aug 2011 09:53:22 +0200

qt-x11-free (3:3.3.8b-8) unstable; urgency=low

  [ Pino Toscano ]
  * Add missing #include for ptrdiff_t, needed with GCC 4.6.
    Thanks Jonathan Riddell for the patch. (Closes: #611255)

  [ Modestas Vainius ]
  * Lower priority of Qt 3 related debian alternatives to 10. This includes
    moc, uic, lupdate, lrelease, designer, assistant, linguist, qmake, qtconfig.
  * Drop qt3-dev-tools-embedded package as it conflicts with Qt 4
    (qt4-dev-tools).
  * Orphan the package:
    - set maintainer to Debian QA Group <packages@qa.debian.org>;
    - remove Uploaders field;
    - remove Vcs-* fields.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 03 May 2011 22:50:00 +0300

qt-x11-free (3:3.3.8b-7) unstable; urgency=low

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.

  [ Pino Toscano ]