@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 6), quilt, cpio, libxext-dev (>= 4.3.0.dfsg.1-4),
  libxcursor-dev, libxinerama-dev, libxi-dev, zlib1g-dev, libjpeg-dev,
  libmng-dev (>= 1.0.3), libpng12-dev | libpng12-0-dev, libfontconfig1-dev,
  libfreetype6-dev, libxft-dev, libiodbc2-dev (>= 3.51.2-4),
- libmysqlclient-dev, flex, libpq-dev, libaudio-dev, libcups2-dev,
+ libmysqlclient-dev, flex, libpq-dev (<< 9.3) | postgresql-server-dev-all, libaudio-dev, libcups2-dev,
  libgl1-mesa-dev | libgl-dev, libglu1-mesa-dev | libglu-dev, libsqlite0-dev,
  firebird2.1-dev [i386 kfreebsd-i386 kfreebsd-amd64 knetbsd-i386 netbsd-i386 amd64 sparc powerpc] | firebird2-dev [i386 amd64]
 Section: libs
