@@ -1,6 +1,7 @@
 qt-x11-free (3:3.3.8b-13) unstable; urgency=low
 
   * Fix freetype inclusion test in xfreetype.test (fixes #1057)
+  * Use postgresql-server-dev-all when available (fixes #1058)
 
  -- Alban Peignier <alban@tryphon.eu>  Wed, 07 May 2014 07:35:00 +0200
 
